- update colors  - add bug report feature  - new move-script for Modal blocks  - add bug animation

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/css/style.css">
-    <title>{% block title %}My Flask App{% endblock %}</title>
+    <title>{% block title %}My Bio App{% endblock %}</title>
 </head>
 <body class="custom-background">
 
@@ -25,9 +25,9 @@
                         </div>
                     </div>
 
-                    <div id="cat-size">
-                        <div id="cat-animation"></div>
-                    </div>
+                            <div id="cat-size">
+                                <div id="cat-animation"></div>
+                            </div>
 
                     <div class="bio_contact row">
 
@@ -36,8 +36,8 @@
                                 <img src="/static/images/address.png" alt="photo" class="img-fluid">
                                 Prague</p>
                             <p class="mt-2">
-                                <img src="/static/images/phone.png" alt="photo" class="img-fluid">
-                                <a class="text-decoration-none text-white" href="tel:+420778962765">778 962 765</a></p>
+                                <img src="/static/images/phone.png" alt="photo" class="img-fluid img-tel">
+                                <a class="text-decoration-none  small" href="tel:+420778962765">778 962 765</a></p>
                         </div>
 
                         <div class="col-4 text-end">
@@ -48,13 +48,18 @@
                             </button>
                         </div>
 
-                        <p class="">
+                        <div class="mb-2">
                             <img src="/static/images/mail.png" alt="photo" class="img-fluid">
-                            martina.bobokova@gmail.com</p>
+                            <button type="button" class="btn btn_contact_mail" data-bs-toggle="modal"
+                                    data-bs-target="#contactMeModal" data-bs-toggle="tooltip" title="Contact Me"
+                                    aria-label="Contact Me">
+                                martina.bobokova@gmail.com
+                            </button>
+                        </div>
                     </div>
 
                     <div class="bio_skills mt-5">
-                        <h4 class="mt-4 mb-5 text-end">TECH EXPERIENCES</h4>
+                        <h4 class="mt-4 mb-5 p-1 text-end">TECH EXPERIENCES</h4>
                         <pre><code>
 {
   'Python': ['Flask', 'Django'],
@@ -72,8 +77,23 @@
 }
                         </code></pre>
                     </div>
-                    <div id="lift_cat-animation"></div>
+                    
+                            <div id="lift_cat-animation"></div>
+
+                    <div class="bio_competencies mt-5 p-4">
+                        <h4 class="mt-2 mb-4 border-bottom text-center">About me</h4>
+                        <ul class="p-0 text-center">
+                            <li class="mb-2">&#127912; Creative Mind</li>      <!-- 🧠 Brain -->
+                            <li class="mb-2">&nbsp; Problem-Solver &#128161;</li>     <!-- 💡  -->
+                            <li class="mb-2">&#128220; Database Knowledge</li>  <!-- 📜  -->
+                            <li class="mb-2">&nbsp; API Experience &#128187;</li>      <!-- 💻  -->
+                            <li class="mb-2">&#128736; CI/CD Knowledge</li>     <!-- ⚙️  -->
+                            <li class="mb-2">&nbsp; Responsible &#9730;</li>           <!-- ☂  -->
+                        </ul>
+                    </div>
+
                 </div>
+
             </div>
 
             <div class="col-md-8 main_content">
@@ -96,9 +116,19 @@
                     {% block content %}
                     <!-- Main content block -->
                     {% endblock %}
-                </div>
-            </div>
 
+                    <div class="bug_report d-flex justify-content-end align-self-end">
+                        <button type="button" class="btn btn_contact" data-bs-toggle="modal"
+                                data-bs-target="#reportBugModal" data-bs-toggle="tooltip" title="Find a bug?"
+                                aria-label="Find a bug?">
+                                    <!-- Animation -->
+                                    <div id="bug_report"></div>
+                                <p class="border-bottom text-center">REPORT BUG</p>
+                        </button>
+                    </div>
+                </div>
+
+            </div>
         </div>
     </div>
 
@@ -112,10 +142,10 @@
 
     <!-- Modal block CONTACT ME -->
 
-    <div class="modal fade" id="contactMeModal" tabindex="-1" aria-labelledby="contactMeModalLabel" aria-hidden="true">
+    <div class="modal fade move_modal" id="contactMeModal" tabindex="-1" aria-labelledby="contactMeModalLabel" aria-hidden="true">
         <div class="modal-dialog">
-            <div class="modal-content">
-                 <div class="modal-header">
+            <div class="modal-content position-absolute">
+                 <div class="modal-header modal-bg-pink">
                     <h5 class="modal-title" id="contactMeModalLabel">Contact Me</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
@@ -125,11 +155,41 @@
                             <label for="sender">E-mail:</label>
                             <input class="form-control mb-3 mt-2" id="sender" name="sender" type="email" required>
                             <label for="message">Message:</label>
-                            <textarea class="form-control mt-2" id="message" name="message" rows="5" required></textarea>
+                            <textarea class="form-control mt-2" id="message" name="message" rows="5" required>
+                            </textarea>
                         </div>
                         <div class="row justify-content-end">
                             <div class="col-auto form-group">
                                 <button class="btn btn-secondary" id="form_button" type="submit">Send E-mail</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal block REPORT BUG -->
+
+    <div class="modal fade move_modal" id="reportBugModal" tabindex="-1" aria-labelledby="reportBugModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content position-absolute">
+                 <div class="modal-header">
+                    <p class="modal-title" id="reportBugModalLabel">Bug spotted in the app! 🐛</p>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form method="post" >
+                        <div class="form-group mb-4">
+                            <input class="form-control mb-3 mt-2" id="sender_rep" name="sender"
+                                   type="email" placeholder="Leave contact if you want">
+
+                            <textarea class="form-control mt-2" id="message_rep" name="message"
+                                      rows="5" required placeholder="I found a bug..."></textarea>
+                        </div>
+                        <div class="row justify-content-end">
+                            <div class="col-auto form-group">
+                                <button class="btn btn-secondary" id="form_button_rep" type="submit">Report!</button>
                             </div>
                         </div>
                     </form>
@@ -168,6 +228,9 @@
 
     <!-- Cat animation Lottie -->
     <script src="{{ url_for('static', filename='js/cat_animation_scripts.js') }}"></script>
+
+    <!-- Modal Dialog Movement -->
+    <script src="{{ url_for('static', filename='js/modal_scripts.js') }}"></script>
 
 </body>
 </html>
