--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,11 @@
 /* --- Main Settings --- */
-/* Colors: Rose #775153, Gold #b2977a, Grey: #2a2a2a, White #dddad7 */
+
+/* Colors:  Rose #775153 - NEW #a1696c,
+            Gold #b2977a,
+            Grey: #2a2a2a,
+            White #dddad7,
+            Dark: #1e1e1e, Darker: #121212
+            */
 
 body {
     font-family: 'Monaco', monospace!important;
@@ -19,7 +25,7 @@ body.custom-background {
 /* --- About / Contact Col --- */
 
 .about_col {
-    background-color: #775153;
+    background-color: #a1696c;
     color: #dddad7;
 }
 .bio_name blockquote {
@@ -34,14 +40,18 @@ body.custom-background {
     max-width: 240px;
 }
 .bio_contact img {
-    max-width: 24px;
+    max-width: 22px;
+    margin-right: 6px;
+}
+.img-tel {
+    max-width: 20px!important;
     margin-right: 6px;
 }
 .about_col ul {
     list-style-type:none;
 }
-.bio_skills, .bio_contact {
-    background-color: #2a2a2a;
+.bio_skills, .bio_contact, .bio_competencies {
+    background-color: #1e1e1e;
     border: 1px solid rgba(224, 176, 150, 0.3);
     padding: 10px;
     margin: 10px;
@@ -49,6 +59,9 @@ body.custom-background {
 }
 .bio_contact {
     margin-top:4px;
+}
+.bio_contact a {
+    color: #dddad7;
 }
 .bio_skills {
     background-image: url('../images/technology.png');
@@ -66,6 +79,7 @@ body.custom-background {
 
 .navbar-nav .nav-item {
     width: 50%;
+    background-color:#1e1e1e;
 }
 .navbar a, .project a {
     color: #b29478;
@@ -81,7 +95,7 @@ body.custom-background {
 }
 
 .navbar a:hover, .project a:hover {
-    color: #775153;
+    color: #a1696c;
 }
 
 /* --- Main Col --- */
@@ -93,38 +107,49 @@ body.custom-background {
 }
 
 .bio_job, .project {
-    background-color: #2a2a2a;
+    background-color: #1e1e1e;
     border: 1px solid rgba(224, 176, 150, 0.3);
     padding: 15px;
     border-radius: 5px;
 }
+.project {
+    border-radius: 0px;
 
+}
 /* --- Bio Job / Job Detail --- */
 
-.bio_job_description {
+.bio_job_description, .portfolio_info {
     color: #dddad7;
     font-family: 'Fira Code', 'Courier New', monospace;
-    background-color: #1e1e1e;
+    background-color: #121212;
     padding: 16px 8px;
-    border: 1px solid #77515342;
+    border: 1px solid #a1696c42;
     border-radius: 5px;
 }
-
+.portfolio_info a {
+    color: #7376c7;
+    font-size: 16px;
+}
 .bio_job_data {
     padding: 0 5%;
 }
-
+.bio_job-date {
+    font-size: 14px;
+    }
 .modal-content {
     background-color: #2a2a2a;
     color: #dddad7;
 }
-
 .modal-header, .modal-footer {
+    font-weight: 600;
     border-color: #333333;
     background-color: #b2977a;
     color: #2a2a2a;
+    padding: 6px 16px;
 }
-
+.modal-bg-pink {
+    background-color: #a1696c;
+}
 /* --- Projects in portfolio --- */
 
 .project img {
@@ -134,16 +159,16 @@ body.custom-background {
 /* --- Buttons --- */
 
 .btn {
-    background-color: #444444;
+    background-color: #121212ba;
     color: #dddad7;
-    border: none;
-    padding: 10px 20px;
+    border: 1px solid #a1696c42;
+    padding: 3px 8px;
     cursor: pointer;
     border-radius: 5px;
 }
 
 .btn-secondary:hover {
-    background-color: #775153!important;
+    background-color: #a1696c!important;
 
 }
 .btn_contact {
@@ -153,7 +178,7 @@ body.custom-background {
     padding: 10px;
 }
 .btn_contact:hover {
-    background-color:#77515340;
+    background-color:#7376c740;
 }
 .btn_contact:focus {
     box-shadow: none;
@@ -163,7 +188,22 @@ body.custom-background {
     max-width: 48px;
     margin: auto;
 }
-
+.btn_contact_mail {
+    text-decoration: underline;
+    color: #7376c7;
+    background-color: transparent!important;
+    border-radius: 0;
+    padding: 0;
+}
+.btn_contact_mail:hover, .btn_contact_mail:focus {
+    color: #a1696c;
+}
+.btn_history {
+    background-color: #a1696c5c;
+}
+.btn_history:hover, .btn_history:focus {
+    color: #a1696c;
+}
 /* --- CAT ANIMATIONS --- */
 
 #cat-animation {
@@ -181,6 +221,14 @@ body.custom-background {
     display: inline-block;
 }
 
+/* --- BUG ANIMATIONS --- */
+
+#bug_report {
+    max-width:80px;
+}
+.bug_report {
+
+}
 /* --- Mobile fixed --- */
 
 @media (max-width: 768px) {
@@ -196,7 +244,7 @@ body.custom-background {
     .project img {
 
     }
-    .bio_contact, .bio_skills {
+    .bio_contact, .bio_skills, .bio_competencies {
         margin: 0px
     }
     #lift_cat-animation {
