--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -7,18 +7,28 @@
 <div class=" g-5 my-3">
     {% for project in projects %}
     <div class="">
-        <div class="project row my-3">
-            <div class="col-md-6">
-                <h5>{{ project.title }}</h5>
-                <p>{{ project.description }}</p>
-                <a href="{{ project.url }}">GitHub Link...</a>
-            </div>
-            <div class="col-md-6">
-                <img class="img-fluid mx-auto d-block" src="/static/images/{{ project.image }}" alt="">
-            </div>
+        <div class="project row">
+            {% if loop.index is odd %}
+                <div class="col-md-6">
+                    <img class="img-fluid mx-auto d-block" src="/static/images/{{ project.image }}" alt="">
+                </div>
+                <div class="col-md-6 portfolio_info align-middle">
+                    <h5>{{ project.title }}</h5>
+                    <p>{{ project.description }}</p>
+                    <a href="{{ project.url }}">GitHub Link...</a>
+                </div>
+            {% else %}
+                <div class="col-md-6 portfolio_info align-middle">
+                    <h5>{{ project.title }}</h5>
+                    <p>{{ project.description }}</p>
+                    <a href="{{ project.url }}">GitHub Link...</a>
+                </div>
+                <div class="col-md-6">
+                    <img class="img-fluid mx-auto d-block" src="/static/images/{{ project.image }}" alt="">
+                </div>
+            {% endif %}
         </div>
     </div>
-
     {% endfor %}
 </div>
 
