--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
         <div class="row">
 
             <div class="col-md-4 main_about">
-                <div class="p-2 h-100 about_col">
+                <div class="p-2 about_col">
                     <div class="bio_about mt-3">
                         <div class="bio_name p-3 pb-0">
                             <h2 class="mb-2">Martina Boboková</h2>
