- update styling for mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -139,7 +139,7 @@ body.custom-background {
 }
 .bio_job-date {
     font-size: 14px;
-    
+    pointer-events: none;
     }
 .modal-content {
     background-color: #2a2a2a;
