--- a/templates/base.html
+++ b/templates/base.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta property="og:title" content="CV - Martina Bobokova" />
-    <meta property="og:image" content="/static/images/36.png" />
+    <meta property="og:title" content="Bio - Martina Bobokova" />
+    <meta property="og:image" content="{{ url_for('static', filename='images/36.png') }}" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/css/style.css">
-    <title>{% block title %}My Bio App{% endblock %}</title>
+    <title>My Bio - Martina Bobokova</title>
 </head>
 <body class="custom-background">
 
