--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta property="og:title" content="Bio - Martina Bobokova" />
-    <meta property="og:image" content="{{ url_for('static', filename='images/36.jpg') }}" />
+    <meta property="og:image" content="https://my-bio-237b09d17bdf.herokuapp.com{{ url_for('static', filename='images/36.jpg') }}" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/css/style.css">
     <title>My Bio - Martina Bobokova</title>
