--- a/templates/base.html
+++ b/templates/base.html
@@ -106,7 +106,7 @@
                             <li class="mb-2">&#128220; Database Knowledge</li>  <!-- 📜  -->
                             <li class="mb-2">&nbsp; API Experience &#128187;</li>      <!-- 💻  -->
                             <li class="mb-2">&#128736; CI/CD Knowledge</li>     <!-- ⚙️  -->
-                            <li class="mb-2">&nbsp; Responsible &#9730;</li>           <!-- ☂  -->
+                            <li class="mb-2">&nbsp; Responsible ⚖️</li>           <!-- ⚖️  -->
                         </ul>
                     </div>
 
