--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -2,32 +2,45 @@
 
 {% block content %}
 
-<div class=" g-5 my-3">
-    {% for project in projects %}
+<div class="g-5 my-3">
+    {% if projects|length > 0 %}
+    <!-- Zobraz prvý projekt -->
     <div class="">
         <div class="project row">
-            {% if loop.index is odd %}
-                <div class="col-md-6">
-                    <img class="img-fluid mx-auto d-block" src="/static/images/{{ project.image }}" alt="">
-                </div>
-                <div class="col-md-6 portfolio_info align-middle">
-                    <h5>{{ project.title }}</h5>
-                    <p>{{ project.description }}</p>
-                    <a href="{{ project.url }}">GitHub Link...</a>
-                </div>
-            {% else %}
-                <div class="col-md-6 portfolio_info align-middle">
-                    <h5>{{ project.title }}</h5>
-                    <p>{{ project.description }}</p>
-                    <a href="{{ project.url }}">GitHub Link...</a>
-                </div>
-                <div class="col-md-6">
-                    <img class="img-fluid mx-auto d-block" src="/static/images/{{ project.image }}" alt="">
-                </div>
-            {% endif %}
+            <div class="col-md-6">
+                <img class="img-fluid mx-auto d-block" src="/static/images/{{ projects.0.image }}" alt="">
+            </div>
+            <div class="col-md-6 portfolio_info align-middle">
+                <h5>{{ projects.0.title }}</h5>
+                <p>{{ projects.0.description }}</p>
+                <a href="{{ projects.0.url }}">GitHub Link...</a>
+            </div>
         </div>
     </div>
-    {% endfor %}
+
+
+    <!-- Courses -->
+    <div class="course_project mt-5">
+        <div class="project row">
+            <h4>Course Projects</h4>
+            {% for project in projects %}
+                {% if loop.index > 1 %}
+                <div class="col-md-6 portfolio_info align-middle row">
+                    <div class="col-md-6">
+                        <h5>{{ project.title }}</h5>
+                    </div>
+                    <div class="col-md-6">
+                        <img class="img-fluid mx-auto d-block" src="/static/images/{{ project.image }}" alt="">
+                    </div>
+                    <p>{{ project.description }}</p>
+                    <a href="{{ project.url }}">GitHub Link...</a>
+                </div>
+            {% endif %}
+        {% endfor %}
+        </div>
+    </div>
+
+    {% endif %}
 </div>
 
 {% endblock %}
