--- a/templates/base.html
+++ b/templates/base.html
@@ -89,7 +89,7 @@
   },
   'Development Tools': [
      'PyCharm', 'Visual Studio Code',
-     'Jupyter'
+     'Jupyter', 'BPMN.io'
   ],
   'Server Environments': ['Linux', 'Windows'],
   'Tools': ['Jira', 'Trello', 'Figma']
