--- a/templates/bio.html
+++ b/templates/bio.html
@@ -22,15 +22,12 @@
 
             <div class="bio_job_description mb-3">
 
-                """<br>
-                Description:<br>
+                <h5>Description:</h5>
                 <div class="bio_job_data">{{ job.job_description | safe }}<br></div>
-
                 <br>
-
-                Technologies & Contributions:<br>
+                <h5>Technologies & Contributions:</h5>
                 <div class="bio_job_data">{{ job.tech | safe }}<br></div>
-                """
+
             </div>
 
             <div class="d-flex justify-content-end">
