--- a/static/css/style.css
+++ b/static/css/style.css
@@ -201,9 +201,6 @@ body {
 /* --- Mobile fixed --- */
 
 @media (max-width: 768px) {
-    .main_about {
-        padding: 0px;
-    }
     body .container {
         margin-top:0px;
     }
@@ -229,5 +226,11 @@ body {
     .about_col {
     height: auto;
     margin-bottom: 3rem;
+    }
+    .main_about {
+    padding-right: 0px!important;
+    }
+    .container {
+    padding: 6px;
     }
 }
