--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta property="og:title" content="Bio - Martina Bobokova" />
     <meta property="og:image" content="https://my-bio-237b09d17bdf.herokuapp.com{{ url_for('static', filename='images/36.jpg') }}" />
+    <link rel="icon" sizes="16x16" href="/static/images/favicon-16x16.png">
+    <link rel="icon" sizes="32x32" href="/static/images/favicon-32x32.png">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/css/style.css">
