--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -16,9 +16,9 @@
                     backend with PostgreSQL database.
                 </p>
                 <div class="">
-                    <a href="https://github.com/mbobokova/my_bio">GitHub Link...</a><br>
-
-                    <a href="https://www.blueelephant.tech/">See the App Here</a>
+                    <a href="https://www.blueelephant.tech/">www.blueelephant.tech</a>
+                    <br>
+                    <a href="https://github.com/mbobokova/my_bio">GitHub Link...</a>
                 </div>
             </div>
             <div class="col-md-4">
@@ -33,7 +33,7 @@
             <div class="col-md-8 ">
                 <p class="pb-2">Is this Flask app</p>
                 <h5>Description:</h5>
-                <p>This Flask-based CV app uses CSV files for data storage and HTML
+                <p>Flask-based CV app uses CSV files for data storage and HTML
                     templates for display. The backend, written in Python, handles routing and email
                     functionality, while the frontend consists Jinja2 templates.
                 </p>
